[gd_scene load_steps=4 format=3 uid="uid://bhx2svxx4h6ay"]

[ext_resource type="PackedScene" uid="uid://c1m7ibet8h0u5" path="res://spells/scenes/spell_scene_base.tscn" id="1_ecc46"]
[ext_resource type="Script" path="res://spells/scenes/proj_spread/proj_spread.gd" id="2_6hbed"]
[ext_resource type="PackedScene" uid="uid://cxv6ps3wfo0nu" path="res://spells/scenes/proj_spread/bullet.tscn" id="3_a28ln"]

[node name="proj_spread" instance=ExtResource("1_ecc46")]
script = ExtResource("2_6hbed")
BULLET = ExtResource("3_a28ln")
waves = 10
bullets_per_wave = 5
max_radians = 0.785
distance_from_caster = 40.0
base_damage = 10

[node name="WaveTimer" type="Timer" parent="." index="0"]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
